tests/NormalTests/paczka1/fuzzy1/10826496.err
Error in line 6: 7PiLdz7cx8G A609 70,5
Error in line 19: 3JPfVv2HCQ S248 59,6
Error in line 20: 3JPfVv2HCQ A728 29,2
Error in line 24: GyoIHDqmeFD A609 22,4
Error in line 30: 3JPfVv2HCQ A728 33,0
Error in line 35: 3JPfVv2HCQ A609 40,9
